--- a/DataImporter.Framework/DataImporter.Framework.csproj
+++ b/DataImporter.Framework/DataImporter.Framework.csproj
@@ -8,6 +8,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="1.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="1.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="1.1.2" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="1.1.2" />
+    <PackageReference Include="NETCore.MailKit" Version="1.0.1" />
   </ItemGroup>
 
 </Project>
