add email configuration

--- a/ZohoImporter/appsettings.json
+++ b/ZohoImporter/appsettings.json
@@ -2,5 +2,15 @@
   "ConnectionStrings": {
     "ACLConnection": "Server=(local);Database=CustomerPortal;User Id=acl;Password=acl;MultipleActiveResultSets=true",
     "ZohoCRMConnection": "Server=SMSAUMEL-DEV-MW\\SQLEXPRESS;Database=ZCRM;User Id=acl;Password=acl;MultipleActiveResultSets=true"
+  },
+  "SMTPSettings": {
+    "Username": "sms_mail",
+    "Password": "smsMAIL01",
+    "LocalDomain": "smsetechnologies.com",
+    "SMTPSeverIP": "192.168.29.76",
+    "SMTPPort": 25,
+    "From": "Zoho Data Importer",
+    "FromAddress": "dataimporter@smsetechnologies.com",
+    "ToAddress": "mwang@1080agile.com"
   }
 }
