add interval setttings

--- a/ZohoImporter/appsettings.json
+++ b/ZohoImporter/appsettings.json
@@ -12,5 +12,6 @@
     "From": "Zoho Data Importer",
     "FromAddress": "dataimporter@smsetechnologies.com",
     "ToAddress": "mwang@1080agile.com"
-  }
+  },
+  "ImportDelay":  30
 }
