--- a/ZohoImporter/appsettings.json
+++ b/ZohoImporter/appsettings.json
@@ -13,5 +13,6 @@
     "FromAddress": "dataimporter@smsetechnologies.com",
     "ToAddress": "mwang@1080agile.com"
   },
-  "ImportDelay":  30
+  "ZohoToken": "31f1e33f09c686f2ddba1ab0bccf0395",
+  "ImportDelay": 30
 }
