--- a/DataImporter.Framework/DataImporter.Framework.csproj
+++ b/DataImporter.Framework/DataImporter.Framework.csproj
@@ -12,4 +12,9 @@
     <PackageReference Include="NETCore.MailKit" Version="1.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\ZohoProxy\ZohoCRMProxyMultiTarget\SharedLibrary\SharedLibrary.csproj" />
+    <ProjectReference Include="..\..\..\ZohoProxy\ZohoCRMProxyMultiTarget\ZohoCRMProxy\ZohoCRMProxy\ZohoCRMProxy.csproj" />
+  </ItemGroup>
+
 </Project>
