add zoho update for partnerportal

--- a/ZohoImporter/appsettings.development.json
+++ b/ZohoImporter/appsettings.development.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
     "ACLConnection": "Server=SMSAUMEL-DEV-MW\\SQLEXPRESS;Database=acl3;User Id=acl;Password=acl;MultipleActiveResultSets=true",
-    "ZohoCRMConnection": "Server=SMSAUMEL-DEV-MW\\SQLEXPRESS;Database=zcrm_data;User Id=acl;Password=acl;MultipleActiveResultSets=true"
+    "ZohoCRMConnection": "Server=SMSAUMEL-DEV-MW\\SQLEXPRESS;Database=PPDB;User Id=acl;Password=acl;MultipleActiveResultSets=true"
   }
 }
