add myob data sync function

--- a/ZohoImporter/appsettings.json
+++ b/ZohoImporter/appsettings.json
@@ -13,6 +13,26 @@
     "FromAddress": "dataimporter@smsetechnologies.com",
     "ToAddress": "mwang@1080agile.com"
   },
+  "MyobImportOptions": {
+    "MyobOptions": {
+      "BaseUri": "http://192.168.10.182",
+      "CompanyFileUuid": "1a9eb89d-ab35-4a01-807c-bb4b22217d4e",
+      "Username": "Administrator",
+      "Password": "",
+      "Port": 8080
+    },
+    "ProductImport": { "SellingTaxUid": "81708b5c-74fa-4237-bc01-a28a21e0f717" },
+    "ContactCustomerImportOptions": {
+      "SellingDetailsOptions": {
+        "SaleLayout": "Item",
+        "PrintedForm": "INCIIPRE-2009         Tax Inclusive Pre-Printed Inv",
+        "InvoiceDelivery": "Print",
+        "FreightTaxCode": "81708b5c-74fa-4237-bc01-a28a21e0f717",
+        "TaxCode": "81708b5c-74fa-4237-bc01-a28a21e0f717",
+        "TermsPaymentIsDue": "InAGivenNumberOfDays"
+      }
+    } 
+  },
   "ZohoToken": "31f1e33f09c686f2ddba1ab0bccf0395",
   "ImportDelay": 30
 }
