--- a/DataImporter.Framework/DataImporter.Framework.csproj
+++ b/DataImporter.Framework/DataImporter.Framework.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.NETCore.App" Version="1.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="1.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="1.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="1.1.2" />
@@ -13,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\MyobProxy\MyobCoreProxy\MyobCoreProxy.csproj" />
     <ProjectReference Include="..\..\..\ZohoProxy\ZohoCRMProxyMultiTarget\SharedLibrary\SharedLibrary.csproj" />
     <ProjectReference Include="..\..\..\ZohoProxy\ZohoCRMProxyMultiTarget\ZohoCRMProxy\ZohoCRMProxy\ZohoCRMProxy.csproj" />
   </ItemGroup>
