--- a/ZohoImporter/ZohoImporter.csproj
+++ b/ZohoImporter/ZohoImporter.csproj
@@ -26,6 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\MyobProxy\MyobCoreProxy\MyobCoreProxy.csproj" />
     <ProjectReference Include="..\DataImporter.Framework\DataImporter.Framework.csproj" />
   </ItemGroup>
 
