add multiple myob file support

--- a/ZohoImporter/ZohoImporter.csproj
+++ b/ZohoImporter/ZohoImporter.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
+    <Configuration>Release</Configuration>
     <TargetFramework>netcoreapp1.1</TargetFramework>
   </PropertyGroup>
 
