--- a/ZohoImporter/appsettings.json
+++ b/ZohoImporter/appsettings.json
@@ -14,22 +14,83 @@
     "ToAddress": "mwang@1080agile.com"
   },
   "MyobImportOptions": {
+    "SalesEmail": "mwang@1080agile.com",
     "MyobOptions": {
       "BaseUri": "http://192.168.10.182",
-      "CompanyFileUuid": "1a9eb89d-ab35-4a01-807c-bb4b22217d4e",
-      "Username": "Administrator",
-      "Password": "",
+      "MyobCompanyFileOptions": {
+        "Australia GST": {
+          "CompanyFileUuid": "1a9eb89d-ab35-4a01-807c-bb4b22217d4e",
+          "Username": "Administrator",
+          "Password": ""
+        },
+        "Australia Export": {
+          "CompanyFileUuid": "1a9eb89d-ab35-4a01-807c-bb4b22217d4e",
+          "Username": "Administrator",
+          "Password": ""
+        },
+        "New Zealand GST": {
+          "CompanyFileUuid": "df1a1518-94e2-48a6-b338-15b233f4d8c8",
+          "Username": "Administrator",
+          "Password": ""
+        },
+        "New Zealand Export": {
+          "CompanyFileUuid": "df1a1518-94e2-48a6-b338-15b233f4d8c8",
+          "Username": "Administrator",
+          "Password": ""
+        }
+        //"Singapore GST": {
+        //  "CompanyFileUuid": "1a9eb89d-ab35-4a01-807c-bb4b22217d4e",
+        //  "Username": "Administrator",
+        //  "Password": ""
+        //},
+        //"Singapore Export": {
+        //  "CompanyFileUuid": "1a9eb89d-ab35-4a01-807c-bb4b22217d4e",
+        //  "Username": "Administrator",
+        //  "Password": ""
+        //}
+      },
       "Port": 8080
     },
-    "ProductImport": { "SellingTaxUid": "81708b5c-74fa-4237-bc01-a28a21e0f717" },
+    "ProductImport": {
+      "AU GST": {
+        "MyobCompanyFileKey": "Australia GST",
+        "SellingTaxUid": "81708b5c-74fa-4237-bc01-a28a21e0f717"
+      },
+      "NZ GST": {
+        "MyobCompanyFileKey": "New Zealand GST",
+        "SellingTaxUid": "8c95af1b-7783-4825-a89f-e47c2f23a6c2"
+      }
+    },
     "ContactCustomerImportOptions": {
-      "SellingDetailsOptions": {
-        "SaleLayout": "Item",
-        "PrintedForm": "INCIIPRE-2009         Tax Inclusive Pre-Printed Inv",
-        "InvoiceDelivery": "Print",
-        "FreightTaxCode": "81708b5c-74fa-4237-bc01-a28a21e0f717",
-        "TaxCode": "81708b5c-74fa-4237-bc01-a28a21e0f717",
-        "TermsPaymentIsDue": "InAGivenNumberOfDays"
+      "Australia GST": {
+        "SellingDetailsOptions": {
+          "SaleLayout": "Item",
+          "PrintedForm": "INCIIPRE-2009         Tax Inclusive Pre-Printed Inv",
+          "InvoiceDelivery": "Print",
+          "FreightTaxCode": "81708b5c-74fa-4237-bc01-a28a21e0f717",
+          "TaxCode": "81708b5c-74fa-4237-bc01-a28a21e0f717",
+          "TermsPaymentIsDue": "Prepaid"
+        }
+      },
+      "Australia Export": {
+        "SellingDetailsOptions": {
+          "SaleLayout": "Item",
+          "PrintedForm": "INCIIPRE-2009         Tax Inclusive Pre-Printed Inv",
+          "InvoiceDelivery": "Print",
+          "FreightTaxCode": "81708b5c-74fa-4237-bc01-a28a21e0f717",
+          "TaxCode": "81708b5c-74fa-4237-bc01-a28a21e0f717",
+          "TermsPaymentIsDue": "Prepaid"
+        }
+      },
+      "New Zealand GST": {
+        "SellingDetailsOptions": {
+          "SaleLayout": "Item",
+          "PrintedForm": "INCIIPRE-2009         Tax Inclusive Pre-Printed Inv",
+          "InvoiceDelivery": "Print",
+          "FreightTaxCode": "8c95af1b-7783-4825-a89f-e47c2f23a6c2",
+          "TaxCode": "8c95af1b-7783-4825-a89f-e47c2f23a6c2",
+          "TermsPaymentIsDue": "Prepaid"
+        }
       }
     }
   },
