double check gl account for product before insert

--- a/ZohoImporter/appsettings.json
+++ b/ZohoImporter/appsettings.json
@@ -58,7 +58,7 @@
       },
       "NZ GST": {
         "MyobCompanyFileKey": "New Zealand GST",
-        "SellingTaxUid": "8c95af1b-7783-4825-a89f-e47c2f23a6c2"
+        "SellingTaxUid": "134cba01-8b1f-446c-a96f-07978b9aa1f5"
       }
     },
     "ContactCustomerImportOptions": {
@@ -77,12 +77,22 @@
           "SaleLayout": "Item",
           "PrintedForm": "INCIIPRE-2009         Tax Inclusive Pre-Printed Inv",
           "InvoiceDelivery": "Print",
-          "FreightTaxCode": "81708b5c-74fa-4237-bc01-a28a21e0f717",
-          "TaxCode": "81708b5c-74fa-4237-bc01-a28a21e0f717",
+          "FreightTaxCode": "0ddf13a4-d352-4fc2-a6b9-a67d7adab07c",
+          "TaxCode": "0ddf13a4-d352-4fc2-a6b9-a67d7adab07c",
           "TermsPaymentIsDue": "Prepaid"
         }
       },
       "New Zealand GST": {
+        "SellingDetailsOptions": {
+          "SaleLayout": "Item",
+          "PrintedForm": "INCIIPRE-2009         Tax Inclusive Pre-Printed Inv",
+          "InvoiceDelivery": "Print",
+          "FreightTaxCode": "134cba01-8b1f-446c-a96f-07978b9aa1f5",
+          "TaxCode": "134cba01-8b1f-446c-a96f-07978b9aa1f5",
+          "TermsPaymentIsDue": "Prepaid"
+        }
+      },
+      "New Zealand Export": {
         "SellingDetailsOptions": {
           "SaleLayout": "Item",
           "PrintedForm": "INCIIPRE-2009         Tax Inclusive Pre-Printed Inv",
