--- a/ZohoImporter/appsettings.json
+++ b/ZohoImporter/appsettings.json
@@ -19,24 +19,24 @@
       "BaseUri": "http://192.168.10.182",
       "MyobCompanyFileOptions": {
         "Australia GST": {
-          "CompanyFileUuid": "1a9eb89d-ab35-4a01-807c-bb4b22217d4e",
-          "Username": "Administrator",
-          "Password": ""
+          "CompanyFileUuid": "144d96d0-94b0-4900-8ba9-40b9767ffbd4",
+          "Username": "PortalAPIAU",
+          "Password": "P0rt458768AU#$"
         },
         "Australia Export": {
-          "CompanyFileUuid": "1a9eb89d-ab35-4a01-807c-bb4b22217d4e",
-          "Username": "Administrator",
-          "Password": ""
+          "CompanyFileUuid": "144d96d0-94b0-4900-8ba9-40b9767ffbd4",
+          "Username": "PortalAPIAU",
+          "Password": "P0rt458768AU#$"
         },
         "New Zealand GST": {
-          "CompanyFileUuid": "df1a1518-94e2-48a6-b338-15b233f4d8c8",
-          "Username": "Administrator",
-          "Password": ""
+          "CompanyFileUuid": "7bcb6643-f25a-4f8b-896a-719864b6548e",
+          "Username": "PortalAPINZ",
+          "Password": "P0rt458768AU#$"
         },
         "New Zealand Export": {
-          "CompanyFileUuid": "df1a1518-94e2-48a6-b338-15b233f4d8c8",
-          "Username": "Administrator",
-          "Password": ""
+          "CompanyFileUuid": "7bcb6643-f25a-4f8b-896a-719864b6548e",
+          "Username": "PortalAPINZ",
+          "Password": "P0rt458768AU#$"
         }
         //"Singapore GST": {
         //  "CompanyFileUuid": "1a9eb89d-ab35-4a01-807c-bb4b22217d4e",
@@ -54,11 +54,11 @@
     "ProductImport": {
       "AU GST": {
         "MyobCompanyFileKey": "Australia GST",
-        "SellingTaxUid": "81708b5c-74fa-4237-bc01-a28a21e0f717"
+        "SellingTaxUid": "e9d51695-25ff-48cb-9dca-58f2bcce2dae"
       },
       "NZ GST": {
         "MyobCompanyFileKey": "New Zealand GST",
-        "SellingTaxUid": "134cba01-8b1f-446c-a96f-07978b9aa1f5"
+        "SellingTaxUid": "919a298e-cd2d-4179-94e4-551eee6ad18a"
       }
     },
     "ContactCustomerImportOptions": {
@@ -67,8 +67,8 @@
           "SaleLayout": "Item",
           "PrintedForm": "INCIIPRE-2009         Tax Inclusive Pre-Printed Inv",
           "InvoiceDelivery": "Print",
-          "FreightTaxCode": "81708b5c-74fa-4237-bc01-a28a21e0f717",
-          "TaxCode": "81708b5c-74fa-4237-bc01-a28a21e0f717",
+          "FreightTaxCode": "e9d51695-25ff-48cb-9dca-58f2bcce2dae",
+          "TaxCode": "e9d51695-25ff-48cb-9dca-58f2bcce2dae",
           "TermsPaymentIsDue": "Prepaid"
         }
       },
@@ -77,8 +77,8 @@
           "SaleLayout": "Item",
           "PrintedForm": "INCIIPRE-2009         Tax Inclusive Pre-Printed Inv",
           "InvoiceDelivery": "Print",
-          "FreightTaxCode": "0ddf13a4-d352-4fc2-a6b9-a67d7adab07c",
-          "TaxCode": "0ddf13a4-d352-4fc2-a6b9-a67d7adab07c",
+          "FreightTaxCode": "78f5e9c4-8159-44cb-a186-f6124c9b22a1",
+          "TaxCode": "78f5e9c4-8159-44cb-a186-f6124c9b22a1",
           "TermsPaymentIsDue": "Prepaid"
         }
       },
@@ -87,8 +87,8 @@
           "SaleLayout": "Item",
           "PrintedForm": "INCIIPRE-2009         Tax Inclusive Pre-Printed Inv",
           "InvoiceDelivery": "Print",
-          "FreightTaxCode": "134cba01-8b1f-446c-a96f-07978b9aa1f5",
-          "TaxCode": "134cba01-8b1f-446c-a96f-07978b9aa1f5",
+          "FreightTaxCode": "919a298e-cd2d-4179-94e4-551eee6ad18a",
+          "TaxCode": "919a298e-cd2d-4179-94e4-551eee6ad18a",
           "TermsPaymentIsDue": "Prepaid"
         }
       },
@@ -97,8 +97,8 @@
           "SaleLayout": "Item",
           "PrintedForm": "INCIIPRE-2009         Tax Inclusive Pre-Printed Inv",
           "InvoiceDelivery": "Print",
-          "FreightTaxCode": "8c95af1b-7783-4825-a89f-e47c2f23a6c2",
-          "TaxCode": "8c95af1b-7783-4825-a89f-e47c2f23a6c2",
+          "FreightTaxCode": "a115ec73-1215-4e36-830b-09a3a6f74106",
+          "TaxCode": "a115ec73-1215-4e36-830b-09a3a6f74106",
           "TermsPaymentIsDue": "Prepaid"
         }
       }
